Fix errors identified by Godana.